--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,10 @@
     android:fitsSystemWindows="true"
     tools:context="com.tied.android.tiedapp.ui.activities.MainActivity">
 
-    <include layout="@layout/content_main" />
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
