--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,7 +7,10 @@
     android:fitsSystemWindows="true"
     tools:context=".ui.activities.signups.SignInActivity">
 
-    <include layout="@layout/content_sign_in" />
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
 
